Bar and line chart

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
 <body>
 <script src="javascript/d3.v4.min.js" type="text/javascript"></script>
 <script src="javascript/visualize.js" type="text/javascript"></script>
-<div class="container"></div>
+<div>RANDOM NUMBERS</div>
+<br>
+<div class="container">
+	<div class="lineChart inline"></div>
+	<div class="barChart inline"></div>
+</div>
+
 </body>
 </html>
