--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,6 @@
 <body>
 <script src="javascript/d3.v4.min.js" type="text/javascript"></script>
 <script src="javascript/visualize.js" type="text/javascript"></script>
-<div><h1>Random Numbers</h1></div>
-<br>
-<div class="container">
-	<div class="lineChart inline"></div>
-	<div class="barChart inline"></div>
-</div>
-<div><button onclick="pause()">Pause</button></div>
-
+<div class="container"></div>
 </body>
 </html>
