--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,8 @@
 <script src="javascript/d3.v4.min.js" type="text/javascript"></script>
 <script src="javascript/visualize.js" type="text/javascript"></script>
 <div class="container"></div>
+<div >
+	<button onclick="pause()">Button</button>
+</div>
 </body>
 </html>
