--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 <script src="javascript/d3.v4.min.js" type="text/javascript"></script>
-<script src="javascript/visualize.js" type="text/javascript"></script>
+
 <div class="container"></div>
+<script src="javascript/studentData.js" type="text/javascript"></script>
 </body>
 </html>
