--- a/public/random.html
+++ b/public/random.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Student Data</title>
+    <title>Random Chart</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <script src="javascript/d3.v4.min.js" type="text/javascript"></script>
 
 <div class="container"></div>
-<script src="javascript/studentData.js" type="text/javascript"></script>
+<script src="javascript/visualize.js" type="text/javascript"></script>
 </body>
 </html>
