--- a/public/ex01.html
+++ b/public/ex01.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Random Chart</title>
-    <link rel="stylesheet" type="text/css" href="css/all_exercise.css">
+    <title>Student Data</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <script src="javascript/d3.v4.min.js" type="text/javascript"></script>
+
 <div class="container"></div>
-<script src="javascript/all_exercise.js" type="text/javascript"></script>
+<script src="javascript/studentData.js" type="text/javascript"></script>
 </body>
 </html>
