--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Random Chart</title>
+    <title>D3 Exercises</title>
     <link rel="stylesheet" type="text/css" href="css/all_exercise.css">
 </head>
 <body>
 <script src="javascript/d3.v4.min.js" type="text/javascript"></script>
 <div class="container"></div>
 <script src="javascript/all_exercise.js" type="text/javascript"></script>
+<script src="javascript/studentData.js" type="text/javascript"></script>
 </body>
 </html>
