--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <title>D3 Exercises</title>
     <link rel="stylesheet" type="text/css" href="css/all_exercise.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/ex_06.css">
 </head>
 <body>
 <script src="javascript/d3.v4.min.js" type="text/javascript"></script>
-<div class="container"></div>
-<script src="javascript/all_exercise.js" type="text/javascript"></script>
+<div class="container" width="400" height="400"></div>
 <script src="javascript/studentData.js" type="text/javascript"></script>
+<script src="javascript/ex_06.js" type="text/javascript"></script>
 </body>
 </html>
