--- a/public/lines/index.html
+++ b/public/lines/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Exercise 07</title>
-    <link rel="stylesheet" type="text/css" href="css/ex07.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<script src="javascript/d3.v4.min.js" type="text/javascript"></script>
+<script src="../lib/d3.v4.min.js" type="text/javascript"></script>
 
 <div class="container"></div>
-<script src="javascript/ex07.js" type="text/javascript"></script>
+<script src="visualize.js" type="text/javascript"></script>
 </body>
 </html>
